# f1-performance-intelligence

./: .gitignore  README.md  pyproject.toml
scripts/: paramator_check.py
src/: Merc_vs_Ferrari_quali.py  compare_quali.py  data_loader.py  dataset_for_llm.py
